# fx-option

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
apps/admin/: .env.example  .env.local.example  jest.config.cjs  jest.config.js  jest.config.ts  jest.setup.ts  middleware.ts  package.json  tsconfig.json  tsconfig.test.json
apps/portal-web/: .env.example  .env.local.example  .eslintrc.json  index.html  jest.config.js  jest.config.ts  jest.setup.ts  middleware.ts  next.config.js  package.json  tailwind.config.cjs  tailwind.config.ts  tsconfig.json  tsconfig.test.json
apps/shared/: package.json  tsconfig.json
audit_client/: __init__.py
docs/: CHANGELOG.md  changelog-gateway-integration.md
docs/api/: gateway-openapi.yaml  gateway.postman_collection.json
docs/compliance/: CTA_README.md  Disclosures.md  Supervisory_Procedures.md
docs/connectors/: QBO.md  SIIGO.md
docs/gateway/: openapi.yaml  postman-collection.json
docs/runbooks/: gateway-telemetry.md
docs/ui/: STYLE_GUIDE.md
risk_reporting/: __init__.py  consumers.py  gateway.py  models.py  service.py
scripts/: run-dev.sh  run-jest.mjs  seed_demo.py
services/: __init__.py
services/audit/: __init__.py  app.py  auth_events.py  chain.py  cli.py  db.py  logging.py
services/execution/: __init__.py  config.py  contracts.py  due_date.py  events.py  (+6 more)
services/pricing-orchestrator/: README.md  pyproject.toml
services/pricing-orchestrator/src/pricing_orchestrator/: __init__.py  domain.py  interfaces.py  orchestrator.py  pricing_engine.py
services/pricing-orchestrator/tests/: test_orchestrator.py
templates/: spec-template.md
tests/: test_audit_chain.py  test_ibkr_client.py  test_market_data_service.py  test_risk_service.py  test_service.py  test_siigo_sandbox_flow.py  test_utils.py
(+207 files in other folders)
