[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fx-option"
version = "0.1.0"
description = "FX option backend services and tooling"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "FX Option Team" }]
dependencies = [
    "fastapi>=0.116",
    "ib-insync>=0.9.86",
    "uvicorn>=0.35",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov",
    "pytest-asyncio>=0.23",
]

[project.scripts]
audit_verify = "services.audit.cli:main"
