[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pricing-orchestrator"
version = "0.1.0"
description = "Orchestrates FX option quote generation"
authors = [{name = "FX Options Team"}]
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
